--- a/apps/expo/src/locales/de/horseRace.json
+++ b/apps/expo/src/locales/de/horseRace.json
@@ -9,7 +9,7 @@
   "statistics": "Statistiken",
   "about": "Hey du, vielen Dank, dass du meine App verwendest :) Hoffentlich gefällt es dir und du gibst mir ein Feedback für Verbesserungen, das würde ich sehr zu schätzen wissen. Ich versuche mein Bestes, um diese App in meiner Freizeit ständig zu verbessern. Aber da ich nicht immer so viel Zeit/Motivation zum Programmieren habe, nachdem ich einen ganzen Arbeitstag programmiert habe, kann es zu Verzögerungen bei Updates kommen. \nIch hoffe, du verstehst das. Fühl dich sich frei, mich zu unterstützen, wenn dir diese App gefällt :) Vielen Dank!",
   "comingSoon": {
-    "session": "Das Spielen mit deinen Freunden wird bald verfügbar sein...",
+    "session": "Das Spielen mit deinen Freunden wird vielleicht irgendwann verfügbar sein...",
     "statistics": "Kommt demnächst..."
   },
   "appName": "Pferderennen"
